using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Keys : MonoBehaviour
{
    public const string PATROL_ANIM_KEY = "Patrol";
    public const string DIE_ANIM_KEY = "Die";
    public const string ATTACK_ANIM_KEY = "Attack";
    public const string IDLE_ANIM_KEY = "Idle";
    public const string TAKEDAMAGE_ANIM_KEY = "TakeDamage";
}
